<resources>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="test_desc">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
    </string>

    <string name="app_name">Poz\'o Taf</string>
    <string name="app_short_desc">
        Commandes &amp; Livraisons de déjeuners au Bureau\n
        « Goût - Diversité – Flexibilité »
    </string>
    <string name="copyright">COPYRIGHT @ POZ\'O TAF - 2018</string>
    <string name="loading">Chargement</string>
    <string name="no_data">Aucune donnée</string>

    <string name="title_activity_slash_screen">SlashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign">SignActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dont_worry_we_arrive">
        Tenez bon, on arrive ...
    </string>

    <string name="user_details">
        Détails personnel
    </string>

    <string name="save">
        Enregister
    </string>

    <string name="edit">
        Modifier
    </string>

    <string name="sign_out">Deconnexion</string>

    <string name="favorite_addresses">
        Adresses favorits
    </string>

    <string name="deletion">
        Suppression
    </string>

    <string name="deletion_text">
        Voulez-vous vraiment supprimer cet element ?
    </string>

    <string name="confirm">
        Confirmer
    </string>

    <string name="cancel">
        Annuler
    </string>

    <string name="hint_full_name">
        Nom complet
    </string>

    <string name="total">
        Total
    </string>

    <string name="msg">
        Laisser un message
    </string>

    <string name="add_to_cart">
        Ajouter au panier
    </string>

    <string name="search">
        Rechercher
    </string>

    <string name="items_in_your_cart">
        items dans votre panier
    </string>

    <string name="add">
        Ajouter
    </string>

    <string name="menu_of_the_day">
        Menu du jour
    </string>

    <string name="home_str">
        ACCUEIL
    </string>

    <string name="resto_str">
        RESTOS
    </string>

    <string name="browse_food_str">
        PLATS
    </string>

    <string name="user_account_str">
        COMPTE
    </string>

    <string name="all_cats">
        TOUS LES PLATS
    </string>

    <string name="back">
        Rétour
    </string>

    <string name="home_sign_str">
        Connectez-vous\nou créer votre compte gratuitement.
    </string>

    <string name="sign_in_str">
        Connexion
    </string>

    <string name="sign_up_str">
        Nouveau compte
    </string>

    <string name="validate">
        Valider
    </string>

    <string name="hint_email_or_phone">
        Email ou Numéro de téléphone
    </string>

    <string name="hint_email">
        Email (Optionnel)
    </string>

    <string name="hint_phone">
        Numéro de téléphone
    </string>

    <string name="hint_passwd">
        Mot de passe
    </string>

    <string name="hint_confirmation_passwd">
        Confirmation mot de passe
    </string>

    <string name="have_you_an_account">
        Vous avez déjà un compte ? <strong><u>Connectez-vous</u></strong>
    </string>

    <string name="i_dont_have_an_account">
        Pas encore inscrit ? <strong><u>Créer un compte gratuitement</u></strong>
    </string>
    <string name="title_activity_food_details">Détails</string>
    <string name="title_activity_cart">Panier</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_order">Commandes</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="pending_order">
        En cours
    </string>

    <string name="more_old">
        Plus anciens
    </string>

    <string name="cart">
        Panier
    </string>

    <string name="orders">
        Commandes
    </string>

    <string name="error_occured">Une erreur s\'est produite.</string>

</resources>
